--- a/po/da_DK.po
+++ b/po/da_DK.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2011-06-12 10:15+0200\n"
+"POT-Creation-Date: 2011-06-13 14:06+0200\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
 "Last-Translator: Mogens Elneff <mogens@elneff.dk>\n"
 "Language-Team: Danish <vdr@linuxtv.org>\n"
@@ -972,6 +972,15 @@ msgstr ""
 msgid "if present"
 msgstr ""
 
+msgid "same day"
+msgstr ""
+
+msgid "same week"
+msgstr ""
+
+msgid "same month"
+msgstr ""
+
 msgid "Template name"
 msgstr ""
 
@@ -1076,7 +1085,7 @@ msgstr ""
 msgid "Min. match in %"
 msgstr ""
 
-msgid "Compare expression"
+msgid "Compare date"
 msgstr ""
 
 msgid "Compare categories"
