--- a/po/nl_NL.po
+++ b/po/nl_NL.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2011-06-12 10:15+0200\n"
+"POT-Creation-Date: 2011-06-13 14:06+0200\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
 "Last-Translator: Maarten Wisse <Maarten.Wisse@urz.uni-hd.de>\n"
 "Language-Team: Dutch <vdr@linuxtv.org>\n"
@@ -1017,6 +1017,17 @@ msgstr "tel dagen"
 msgid "if present"
 msgstr ""
 
+#, fuzzy
+msgid "same day"
+msgstr "Eerste dag"
+
+#, fuzzy
+msgid "same week"
+msgstr "Dag van de week"
+
+msgid "same month"
+msgstr ""
+
 msgid "Template name"
 msgstr "Naam van sjabloon"
 
@@ -1132,8 +1143,8 @@ msgid "Min. match in %"
 msgstr "  Min. duur"
 
 #, fuzzy
-msgid "Compare expression"
-msgstr "reguliere uitdrukking"
+msgid "Compare date"
+msgstr "Vergelijk titel"
 
 msgid "Compare categories"
 msgstr "vergelijk categoriëen"
@@ -1295,3 +1306,7 @@ msgstr "in %02ldh"
 #, c-format
 msgid "in %02ldm"
 msgstr "in %02ldm"
+
+#, fuzzy
+#~ msgid "Compare expression"
+#~ msgstr "reguliere uitdrukking"
