Remove obsolete VDR < 1.5.3 progressbar support.

--- a/po/fi_FI.po
+++ b/po/fi_FI.po
@@ -8,14 +8,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: EPGSearch 0.9.25\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2011-06-13 14:06+0200\n"
+"POT-Creation-Date: 2011-09-14 19:13+0300\n"
 "PO-Revision-Date: 2011-01-04 21:07+0200\n"
 "Last-Translator: Ville Skyttä <ville.skytta@iki.fi>\n"
 "Language-Team: Finnish <vdr@linuxtv.org>\n"
+"Language: fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: fi\n"
 "X-Generator: Lokalize 1.1\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
@@ -97,12 +97,6 @@ msgstr "Komennot"
 
 msgid "Button$Search"
 msgstr "Etsi"
-
-msgid "pipes"
-msgstr "teksti"
-
-msgid "graphical"
-msgstr "grafiikka"
 
 msgid "never"
 msgstr "ei koskaan"
@@ -200,12 +194,8 @@ msgstr ""
 msgid "Show progress in 'Now'"
 msgstr "Näytä aikajana 'Nyt'-sivulla"
 
-msgid ""
-"Help$Shows a progressbar in 'Overview - Now' that informs about the remaining time of the current event.\n"
-"Depending on your selected skin you can choose between 'Pipes' or 'graphical' to get the best look."
-msgstr ""
-"Näyttää aikajanan tämänhetkisessä yleiskatsauksessa.\n"
-"Voit valita käyttämäsi ulkoasun mukaan joko teksti- tai grafiikkapohjaisen aikajanan."
+msgid "Help$Shows a progressbar in 'Overview - Now' that informs about the remaining time of the current event."
+msgstr "Näyttää aikajanan tämänhetkisessä yleiskatsauksessa."
 
 msgid "Show channel numbers"
 msgstr "Näytä kanavien numerointi"
