--- a/po/fr_FR.po
+++ b/po/fr_FR.po
@@ -10,14 +10,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2011-06-13 14:06+0200\n"
+"POT-Creation-Date: 2011-09-14 19:13+0300\n"
 "PO-Revision-Date: 2008-04-30 08:36+0200\n"
 "Last-Translator: Patrice Staudt <patrice.staudt@laposte.net>\n"
 "Language-Team: French <vdr@linuxtv.org>\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: fr\n"
 
 msgid "Channel groups"
 msgstr "Groupe de chaînes"
@@ -98,12 +98,6 @@ msgstr "Commandes"
 
 msgid "Button$Search"
 msgstr "Recherche"
-
-msgid "pipes"
-msgstr "barre verticale"
-
-msgid "graphical"
-msgstr "Graphique"
 
 msgid "never"
 msgstr "jamais"
@@ -201,12 +195,8 @@ msgstr ""
 msgid "Show progress in 'Now'"
 msgstr "Afficher le progrès dans 'Maintenant'"
 
-msgid ""
-"Help$Shows a progressbar in 'Overview - Now' that informs about the remaining time of the current event.\n"
-"Depending on your selected skin you can choose between 'Pipes' or 'graphical' to get the best look."
-msgstr ""
-"Affiche la barre de progression dans le menu 'Maintenant', qui indique l'avancement de l'émission en cours.\n"
-"L'afficher est mieu approprié suivant le skin choisi en 'Bar verticale' ou 'graphique'."
+msgid "Help$Shows a progressbar in 'Overview - Now' that informs about the remaining time of the current event."
+msgstr "Affiche la barre de progression dans le menu 'Maintenant', qui indique l'avancement de l'émission en cours."
 
 msgid "Show channel numbers"
 msgstr "Afficher le numéro de la chaîne"
