--- a/po/nl_NL.po
+++ b/po/nl_NL.po
@@ -9,14 +9,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2011-06-13 14:06+0200\n"
+"POT-Creation-Date: 2011-09-14 19:13+0300\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
 "Last-Translator: Maarten Wisse <Maarten.Wisse@urz.uni-hd.de>\n"
 "Language-Team: Dutch <vdr@linuxtv.org>\n"
+"Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-15\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: nl\n"
 
 msgid "Channel groups"
 msgstr "Kanaal groepen"
@@ -97,12 +97,6 @@ msgstr "Commando's"
 
 msgid "Button$Search"
 msgstr "Zoek"
-
-msgid "pipes"
-msgstr "pipes"
-
-msgid "graphical"
-msgstr "grafisch"
 
 msgid "never"
 msgstr "nooit"
@@ -200,12 +194,8 @@ msgstr ""
 msgid "Show progress in 'Now'"
 msgstr "Toon voortgang in 'Nu'"
 
-msgid ""
-"Help$Shows a progressbar in 'Overview - Now' that informs about the remaining time of the current event.\n"
-"Depending on your selected skin you can choose between 'Pipes' or 'graphical' to get the best look."
-msgstr ""
-"Toont een voortschreidingsbalk in 'Overzicht - Nu' welke de resterende tijd van het huidige programma weergeeft.\n"
-"Afhankelijk van de geselecteerde 'Skin' kan gekozen worden voor het beste uiterlijk"
+msgid "Help$Shows a progressbar in 'Overview - Now' that informs about the remaining time of the current event."
+msgstr "Toont een voortschreidingsbalk in 'Overzicht - Nu' welke de resterende tijd van het huidige programma weergeeft."
 
 msgid "Show channel numbers"
 msgstr "Toon kanaal nummers"
