--- a/po/de_DE.po
+++ b/po/de_DE.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2011-06-13 14:06+0200\n"
+"POT-Creation-Date: 2011-09-14 19:13+0300\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
 "Last-Translator: Klaus Schmidinger <kls@cadsoft.de>\n"
 "Language-Team: German <vdr@linuxtv.org>\n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-15\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: de\n"
 
 msgid "Channel groups"
 msgstr "Kanalgruppen"
@@ -94,12 +94,6 @@ msgstr "Befehle"
 
 msgid "Button$Search"
 msgstr "Suche"
-
-msgid "pipes"
-msgstr "Pipes"
-
-msgid "graphical"
-msgstr "graphisch"
 
 msgid "never"
 msgstr "nie"
@@ -197,12 +191,8 @@ msgstr ""
 msgid "Show progress in 'Now'"
 msgstr "Zeige Fortschritt in 'Jetzt'"
 
-msgid ""
-"Help$Shows a progressbar in 'Overview - Now' that informs about the remaining time of the current event.\n"
-"Depending on your selected skin you can choose between 'Pipes' or 'graphical' to get the best look."
-msgstr ""
-"Zeigt einen Fortschrittsbalken in 'Übersicht - Jetzt' an, der wiedergibt wieweit die Sendung bereits fortgeschritten ist.\n"
-"Abhängig vom gewählten Skin kann man zwischen 'Pipes' und 'grafisch' wählen, um die Darstellung zu verbessern."
+msgid "Help$Shows a progressbar in 'Overview - Now' that informs about the remaining time of the current event."
+msgstr "Zeigt einen Fortschrittsbalken in 'Übersicht - Jetzt' an, der wiedergibt wieweit die Sendung bereits fortgeschritten ist."
 
 msgid "Show channel numbers"
 msgstr "Zeige Kanalnummern"
