--- a/po/es_ES.po
+++ b/po/es_ES.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2011-06-13 14:06+0200\n"
+"POT-Creation-Date: 2011-09-14 19:13+0300\n"
 "PO-Revision-Date: 2007-11-18 20:09+0200\n"
 "Last-Translator: bittor from open7x0.org <bittor7x0 _at_ gmail.com>\n"
 "Language-Team: Spanish <vdr@linuxtv.org>\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-15\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: es\n"
 
 msgid "Channel groups"
 msgstr "Grupos de canales"
@@ -94,12 +94,6 @@ msgstr "Órdenes"
 
 msgid "Button$Search"
 msgstr "Buscar"
-
-msgid "pipes"
-msgstr "barra vertical"
-
-msgid "graphical"
-msgstr "gráfico"
 
 msgid "never"
 msgstr "nunca"
@@ -197,12 +191,8 @@ msgstr ""
 msgid "Show progress in 'Now'"
 msgstr "Mostrar progreso en 'Ahora'"
 
-msgid ""
-"Help$Shows a progressbar in 'Overview - Now' that informs about the remaining time of the current event.\n"
-"Depending on your selected skin you can choose between 'Pipes' or 'graphical' to get the best look."
-msgstr ""
-"Muestra una barra de progreso en la pantalla 'Ahora' que informa sobre el tiempo restante de la emisión actual.\n"
-"Dependiendo del skin seleccionado puede elegir entre 'barra vertical' o 'gráfico' para conseguir la mejor apariencia."
+msgid "Help$Shows a progressbar in 'Overview - Now' that informs about the remaining time of the current event."
+msgstr "Muestra una barra de progreso en la pantalla 'Ahora' que informa sobre el tiempo restante de la emisión actual."
 
 msgid "Show channel numbers"
 msgstr "Mostrar el número de los canales"
