--- a/po/hr_HR.po
+++ b/po/hr_HR.po
@@ -8,14 +8,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2011-06-13 14:06+0200\n"
+"POT-Creation-Date: 2011-09-14 19:13+0300\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
 "Last-Translator: Drazen Dupor <drazen.dupor@dupor.com>\n"
 "Language-Team: Croatian <vdr@linuxtv.org>\n"
+"Language: hr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-2\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: hr\n"
 
 msgid "Channel groups"
 msgstr ""
@@ -95,12 +95,6 @@ msgid "Button$Commands"
 msgstr "Snimi"
 
 msgid "Button$Search"
-msgstr ""
-
-msgid "pipes"
-msgstr ""
-
-msgid "graphical"
 msgstr ""
 
 msgid "never"
@@ -193,9 +187,7 @@ msgstr ""
 msgid "Show progress in 'Now'"
 msgstr ""
 
-msgid ""
-"Help$Shows a progressbar in 'Overview - Now' that informs about the remaining time of the current event.\n"
-"Depending on your selected skin you can choose between 'Pipes' or 'graphical' to get the best look."
+msgid "Help$Shows a progressbar in 'Overview - Now' that informs about the remaining time of the current event."
 msgstr ""
 
 msgid "Show channel numbers"
