--- a/po/it_IT.po
+++ b/po/it_IT.po
@@ -9,14 +9,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2011-07-10 20:44+0200\n"
+"POT-Creation-Date: 2011-09-14 19:13+0300\n"
 "PO-Revision-Date: 2011-07-17 17:46+0100\n"
 "Last-Translator: Diego Pierotto <vdr-italian@tiscali.it>\n"
 "Language-Team: Italian <vdr@linuxtv.org>\n"
+"Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: it\n"
 "X-Poedit-Language: Italian\n"
 "X-Poedit-Country: ITALY\n"
 "X-Poedit-SourceCharset: utf-8\n"
@@ -99,12 +99,6 @@ msgstr "Comandi"
 
 msgid "Button$Search"
 msgstr "Cerca"
-
-msgid "pipes"
-msgstr "barre verticali"
-
-msgid "graphical"
-msgstr "grafica"
 
 msgid "never"
 msgstr "mai"
@@ -202,12 +196,8 @@ msgstr ""
 msgid "Show progress in 'Now'"
 msgstr "Visualizza progresso in 'Adesso'"
 
-msgid ""
-"Help$Shows a progressbar in 'Overview - Now' that informs about the remaining time of the current event.\n"
-"Depending on your selected skin you can choose between 'Pipes' or 'graphical' to get the best look."
-msgstr ""
-"Mostra una barra d'avanzamento in 'Sommario - Adesso' che informa sul tempo rimanente dell'evento attuale.\n"
-"A seconda dell'interfaccia puoi selezionare tra 'Barre verticali' o 'Grafica' per avere una visuale migliore."
+msgid "Help$Shows a progressbar in 'Overview - Now' that informs about the remaining time of the current event."
+msgstr "Mostra una barra d'avanzamento in 'Sommario - Adesso' che informa sul tempo rimanente dell'evento attuale."
 
 msgid "Show channel numbers"
 msgstr "Visualizza i numeri dei canali"
