--- a/po/lt_LT.po
+++ b/po/lt_LT.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.7.10\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2011-06-13 14:06+0200\n"
+"POT-Creation-Date: 2011-09-14 19:13+0300\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
 "Last-Translator: Valdemaras Pipiras <varas@ambernet.lt>\n"
 "Language-Team: Lithuanian <vdr@linuxtv.org>\n"
+"Language: lt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: lt\n"
 
 msgid "Channel groups"
 msgstr "kanalo grupės"
@@ -94,12 +94,6 @@ msgstr "Komandos"
 
 msgid "Button$Search"
 msgstr "Paieška"
-
-msgid "pipes"
-msgstr "vanzdžiai"
-
-msgid "graphical"
-msgstr "grafinė"
 
 msgid "never"
 msgstr "niekada"
@@ -197,12 +191,8 @@ msgstr ""
 msgid "Show progress in 'Now'"
 msgstr "Rodyti praeitą laiką nuo einamos programos pradžios arba kitaip progresą 'Dabar' skiltyje"
 
-msgid ""
-"Help$Shows a progressbar in 'Overview - Now' that informs about the remaining time of the current event.\n"
-"Depending on your selected skin you can choose between 'Pipes' or 'graphical' to get the best look."
-msgstr ""
-"Rodo progreso juostą 'Kas rodoma dabar' dalyje, kas suteikia daugiau informacijos apie tai kiek laiko laida dar tęsis.\n"
-"Priklausomai nuo pasirinkto apvalkalo, kad pasiektumėt gražiausią išvaizdą, galite pasirinkti tarp 'Vamzdeliai' ir 'Grafinis' variantų."
+msgid "Help$Shows a progressbar in 'Overview - Now' that informs about the remaining time of the current event."
+msgstr "Rodo progreso juostą 'Kas rodoma dabar' dalyje, kas suteikia daugiau informacijos apie tai kiek laiko laida dar tęsis."
 
 msgid "Show channel numbers"
 msgstr "Rodyti kanalų numerius"
