--- a/po/sk_SK.po
+++ b/po/sk_SK.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: epgsearch\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2011-06-13 14:06+0200\n"
+"POT-Creation-Date: 2011-09-14 19:13+0300\n"
 "PO-Revision-Date: 2009-11-02 09:40+0100\n"
 "Last-Translator: Milan Hrala <hrala.milan@gmail.com>\n"
 "Language-Team: Slovak <hrala.milan@gmail.com>\n"
+"Language: sk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-2\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sk\n"
 
 msgid "Channel groups"
 msgstr "Skupiny kanálov"
@@ -95,12 +95,6 @@ msgstr "Príkazy"
 
 msgid "Button$Search"
 msgstr "Hµada»"
-
-msgid "pipes"
-msgstr "vedenie"
-
-msgid "graphical"
-msgstr "grafický"
 
 msgid "never"
 msgstr "nikdy"
@@ -198,12 +192,8 @@ msgstr ""
 msgid "Show progress in 'Now'"
 msgstr "Zobrazi» proces v 'Now'"
 
-msgid ""
-"Help$Shows a progressbar in 'Overview - Now' that informs about the remaining time of the current event.\n"
-"Depending on your selected skin you can choose between 'Pipes' or 'graphical' to get the best look."
-msgstr ""
-"Ukazuje priebeh v 'Prehµad - teraz', ktorý informuje o zostávajúcom èase aktuálnej udalosti. \n"
-"V závislosti na zvolenej téme si mô¾ete vybra» medzi 'textovým' alebo 'grafickým' a dosta» tak èo najlep¹í vzhµad.\t\t"
+msgid "Help$Shows a progressbar in 'Overview - Now' that informs about the remaining time of the current event."
+msgstr "Ukazuje priebeh v 'Prehµad - teraz', ktorý informuje o zostávajúcom èase aktuálnej udalosti."
 
 msgid "Show channel numbers"
 msgstr "Zobrazi» èíslo kanálu"
