--- a/po/tr_TR.po
+++ b/po/tr_TR.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2011-06-13 14:06+0200\n"
+"POT-Creation-Date: 2011-09-14 19:13+0300\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
 "Last-Translator: Oktay Yolgeçen <oktay_73@yahoo.de>\n"
 "Language-Team: Turkish <vdr@linuxtv.org>\n"
+"Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-9\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: tr\n"
 
 msgid "Channel groups"
 msgstr ""
@@ -93,12 +93,6 @@ msgid "Button$Commands"
 msgstr ""
 
 msgid "Button$Search"
-msgstr ""
-
-msgid "pipes"
-msgstr ""
-
-msgid "graphical"
 msgstr ""
 
 msgid "never"
@@ -191,9 +185,7 @@ msgstr ""
 msgid "Show progress in 'Now'"
 msgstr ""
 
-msgid ""
-"Help$Shows a progressbar in 'Overview - Now' that informs about the remaining time of the current event.\n"
-"Depending on your selected skin you can choose between 'Pipes' or 'graphical' to get the best look."
+msgid "Help$Shows a progressbar in 'Overview - Now' that informs about the remaining time of the current event."
 msgstr ""
 
 msgid "Show channel numbers"
