--- a/po/ca_ES.po
+++ b/po/ca_ES.po
@@ -3,7 +3,7 @@
 # This file is distributed under the same license as the VDR package.
 # Marc Rovira Vall <tm05462@salleURL.edu>, 2003
 # Ramon Roca <ramon.roca@xcombo.com>, 2003
-# Jordi Vil‡ <jvila@tinet.org>, 2003
+# Jordi Vil√† <jvila@tinet.org>, 2003
 #
 msgid ""
 msgstr ""
@@ -11,11 +11,11 @@ msgstr ""
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
 "POT-Creation-Date: 2011-09-14 19:13+0300\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
-"Last-Translator: Jordi Vil‡ <jvila@tinet.org>\n"
+"Last-Translator: Jordi Vil√† <jvila@tinet.org>\n"
 "Language-Team: Catalan <vdr@linuxtv.org>\n"
 "Language: ca\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-1\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 msgid "Channel groups"
@@ -323,7 +323,7 @@ msgid ""
 msgstr ""
 
 msgid "Button$Setup"
-msgstr "ConfiguraciÛ"
+msgstr "Configuraci√≥"
 
 msgid "Use search timers"
 msgstr ""
