--- a/po/cs_CZ.po
+++ b/po/cs_CZ.po
@@ -1,7 +1,7 @@
 # VDR plugin language source file.
 # Copyright (C) 2007 Klaus Schmidinger <kls@cadsoft.de>
 # This file is distributed under the same license as the VDR package.
-# VladimÌr B·rta <vladimir.barta@k2atmitec.cz>, 2006
+# Vladim√≠r B√°rta <vladimir.barta@k2atmitec.cz>, 2006
 #
 msgid ""
 msgstr ""
@@ -9,11 +9,11 @@ msgstr ""
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
 "POT-Creation-Date: 2011-09-14 19:13+0300\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
-"Last-Translator: VladimÌr B·rta <vladimir.barta@k2atmitec.cz>\n"
+"Last-Translator: Vladim√≠r B√°rta <vladimir.barta@k2atmitec.cz>\n"
 "Language-Team: Czech <vdr@linuxtv.org>\n"
 "Language: cs\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-2\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 msgid "Channel groups"
@@ -91,7 +91,7 @@ msgstr ""
 
 #, fuzzy
 msgid "Button$Commands"
-msgstr "Nahr·t"
+msgstr "Nahr√°t"
 
 msgid "Button$Search"
 msgstr ""
@@ -321,7 +321,7 @@ msgid ""
 msgstr ""
 
 msgid "Button$Setup"
-msgstr "NastavenÌ"
+msgstr "Nastaven√≠"
 
 msgid "Use search timers"
 msgstr ""
@@ -932,7 +932,7 @@ msgid "Edit search"
 msgstr ""
 
 msgid "Record"
-msgstr "Nahr·t"
+msgstr "Nahr√°t"
 
 msgid "Announce by OSD"
 msgstr ""
