--- a/po/el_GR.po
+++ b/po/el_GR.po
@@ -13,7 +13,7 @@ msgstr ""
 "Language-Team: Greek <vdr@linuxtv.org>\n"
 "Language: el\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-7\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 msgid "Channel groups"
@@ -91,7 +91,7 @@ msgstr ""
 
 #, fuzzy
 msgid "Button$Commands"
-msgstr "Εγγραφή"
+msgstr "Ξ•Ξ³Ξ³ΟΞ±Ο†Ξ®"
 
 msgid "Button$Search"
 msgstr ""
@@ -321,7 +321,7 @@ msgid ""
 msgstr ""
 
 msgid "Button$Setup"
-msgstr "Ρυθμισεις"
+msgstr "Ξ΅Ο…ΞΈΞΌΞΉΟƒΞµΞΉΟ‚"
 
 msgid "Use search timers"
 msgstr ""
@@ -932,7 +932,7 @@ msgid "Edit search"
 msgstr ""
 
 msgid "Record"
-msgstr "Εγγραφή"
+msgstr "Ξ•Ξ³Ξ³ΟΞ±Ο†Ξ®"
 
 msgid "Announce by OSD"
 msgstr ""
