--- a/po/et_EE.po
+++ b/po/et_EE.po
@@ -13,7 +13,7 @@ msgstr ""
 "Language-Team: Estonian <vdr@linuxtv.org>\n"
 "Language: et\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-13\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 msgid "Channel groups"
@@ -321,7 +321,7 @@ msgid ""
 msgstr ""
 
 msgid "Button$Setup"
-msgstr "Sätted"
+msgstr "SÃ¤tted"
 
 msgid "Use search timers"
 msgstr ""
