--- a/po/nn_NO.po
+++ b/po/nn_NO.po
@@ -1,7 +1,7 @@
 # VDR plugin language source file.
 # Copyright (C) 2007 Klaus Schmidinger <kls@cadsoft.de>
 # This file is distributed under the same license as the VDR package.
-# Jørgen Tvedt <pjtvedt@online.no>, 2001
+# JÃ¸rgen Tvedt <pjtvedt@online.no>, 2001
 # Truls Slevigen <truls@slevigen.no>, 2002
 #
 msgid ""
@@ -14,7 +14,7 @@ msgstr ""
 "Language-Team: Norwegian Nynorsk <vdr@linuxtv.org>\n"
 "Language: nn\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-1\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 msgid "Channel groups"
