--- a/po/ro_RO.po
+++ b/po/ro_RO.po
@@ -14,7 +14,7 @@ msgstr ""
 "Language-Team: Romanian <vdr@linuxtv.org>\n"
 "Language: ro\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-2\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 msgid "Channel groups"
@@ -321,7 +321,7 @@ msgid ""
 msgstr ""
 
 msgid "Button$Setup"
-msgstr "Configuraþie"
+msgstr "ConfiguraÅ£ie"
 
 msgid "Use search timers"
 msgstr ""
@@ -932,7 +932,7 @@ msgid "Edit search"
 msgstr ""
 
 msgid "Record"
-msgstr "Înregistr."
+msgstr "ÃŽnregistr."
 
 msgid "Announce by OSD"
 msgstr ""
