--- a/po/ru_RU.po
+++ b/po/ru_RU.po
@@ -13,7 +13,7 @@ msgstr ""
 "Language-Team: Russian <vdr@linuxtv.org>\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-5\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 msgid "Channel groups"
@@ -320,7 +320,7 @@ msgid ""
 msgstr ""
 
 msgid "Button$Setup"
-msgstr "Ω–·‚‡ﬁŸ⁄–"
+msgstr "–ù–∞—Å—Ç—Ä–æ–π–∫–∞"
 
 msgid "Use search timers"
 msgstr ""
@@ -931,7 +931,7 @@ msgid "Edit search"
 msgstr ""
 
 msgid "Record"
-msgstr "∑–ﬂÿ·Ï"
+msgstr "–ó–∞–ø–∏—Å—å"
 
 msgid "Announce by OSD"
 msgstr ""
