--- a/po/sl_SI.po
+++ b/po/sl_SI.po
@@ -14,7 +14,7 @@ msgstr ""
 "Language-Team: Slovenian <vdr@linuxtv.org>\n"
 "Language: sl\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-2\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 msgid "Channel groups"
