--- a/po/sv_SE.po
+++ b/po/sv_SE.po
@@ -14,7 +14,7 @@ msgstr ""
 "Language-Team: Swedish <vdr@linuxtv.org>\n"
 "Language: sv\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-1\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 msgid "Channel groups"
@@ -321,7 +321,7 @@ msgid ""
 msgstr ""
 
 msgid "Button$Setup"
-msgstr "Inst‰llningar"
+msgstr "Inst√§llningar"
 
 msgid "Use search timers"
 msgstr ""
