--- a/po/tr_TR.po
+++ b/po/tr_TR.po
@@ -1,7 +1,7 @@
 # VDR plugin language source file.
 # Copyright (C) 2007 Klaus Schmidinger <kls@cadsoft.de>
 # This file is distributed under the same license as the VDR package.
-# Oktay Yolgeçen <oktay_73@yahoo.de>, 2007
+# Oktay YolgeÃ§en <oktay_73@yahoo.de>, 2007
 #
 msgid ""
 msgstr ""
@@ -9,11 +9,11 @@ msgstr ""
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
 "POT-Creation-Date: 2011-09-14 19:13+0300\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
-"Last-Translator: Oktay Yolgeçen <oktay_73@yahoo.de>\n"
+"Last-Translator: Oktay YolgeÃ§en <oktay_73@yahoo.de>\n"
 "Language-Team: Turkish <vdr@linuxtv.org>\n"
 "Language: tr\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-9\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 msgid "Channel groups"
