--- a/HISTORY
+++ b/HISTORY
@@ -6,6 +6,7 @@ new:
 - new bugtracker at http://projects.vdr-developer.org/projects/plg-epgsearch - thanks to Tobias Grimm
 - dropped old code for vdr < 1.6.0, thanks to Ville Skyttä for whole pile of patches
 - updated MainMenuHooks patch to 1.0.1
+- czech translation, thanks to Radek Stastny
 
 fixes:
 - fixed a crash when editing blacklists
