--- a/HISTORY.DE
+++ b/HISTORY.DE
@@ -6,6 +6,7 @@ neu:
 - Neuer Bugtracker unter http://projects.vdr-developer.org/projects/plg-epgsearch - Danke an Tobias Grimm
 - alten Code für vdr < 1.6.0 entfernt, Danke an Ville Skyttä für einen ganzen Haufen Patches
 - MainMenuHooks-Patch auf 1.0.1 aktualisiert
+- tschechische Übersetzung, Danke an Radek Stastny
 
 fixes:
 - Crash beim Editieren von Ausschlusslisten korrigiert
